refactor: enhance backend services and tests - EmailService (110+ lines), ConflictDetectionService (180+ lines), AutoSchedulingService updates, updated Schedule/LeaveRequest/Audit services, new DateUtils util, updated unit tests
Co-authored-by: Cursor <cursoragent@cursor.com>